---
source: compiler-core/src/fsharp/tests/pipes.rs
assertion_line: 30
expression: "\npub fn apply(f: fn(a) -> b, a: a) { a |> f }\n"
---
module rec my.``mod``
let apply(f: 't8 -> 't9) (a: 't8): 't9 = begin
    let _pipe = a
    f (_pipe)
end
